Fix tooltip text not showing

--- a/styles/ranks.module.css
+++ b/styles/ranks.module.css
@@ -40,7 +40,8 @@
 }
 
 .other [data-id='tooltip'] {
-    background: white;
+    background: black;
+    color: white;
 }
 
 .icon {
